Mais um teste maldito

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "express": "^4.17.1",
     "helmet": "^3.21.3",
+    "mongoose": "^5.9.4",
     "nodemon": "^2.0.2"
   }
 }
