--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,6 +1,7 @@
 tasks:
   - init: echo "Replace me with a build script for the project."
-    command: echo "Replace me with omething that should run on every start, or just
-      remove me entirely."
+    command: mkdir -p data && mongodb --dbpath data
 image:
   file: .gitpod.Dockerfile
+
+  
